poc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-1
spec:
  selector:
    matchLabels:
      app: pod-1
  replicas: 1
  template:
    metadata:
      labels:
        app: pod-1
    spec:
      containers:
        - name: curl
          image: curlimages/curl
          args:
          - "sleep"
          - "1000000"
          resources:
            limits:
              cpu: "0.1"
              memory: 128Mo
        - name: listen80
          image: python:slim
          command: 
          - "python3"
          - "-m"
          - "http.server"
          - "80"
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "0.1"
              memory: 128Mo
        - name: listen81
          image: python:slim
          command: 
          - "python3"
          - "-m"
          - "http.server"
          - "81"
          ports:
            - containerPort: 81
          resources:
            limits:
              cpu: "0.1"
              memory: 128Mo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-2
spec:
  selector:
    matchLabels:
      app: pod-2
  replicas: 1
  template:
    metadata:
      labels:
        app: pod-2
    spec:
      containers:
        - name: curl
          image: curlimages/curl
          args:
          - "sleep"
          - "1000000"
          resources:
            limits:
              cpu: "0.1"
              memory: 128Mo
        - name: listen80
          image: python:slim
          command: 
          - "python3"
          - "-m"
          - "http.server"
          - "80"
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "0.1"
              memory: 128Mo
        - name: listen81
          image: python:slim
          command: 
          - "python3"
          - "-m"
          - "http.server"
          - "81"
          ports:
            - containerPort: 81
          resources:
            limits:
              cpu: "0.1"
              memory: 128Mo
---
apiVersion: v1
kind: Service
metadata:
  name: service-1-80
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: pod-1
---
apiVersion: v1
kind: Service
metadata:
  name: service-1-81
spec:
  ports:
    - port: 81
      protocol: TCP
      targetPort: 81
  selector:
    app: pod-1
---
apiVersion: v1
kind: Service
metadata:
  name: service-2-80
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: pod-2
---
apiVersion: v1
kind: Service
metadata:
  name: service-2-81
spec:
  ports:
    - port: 81
      protocol: TCP
      targetPort: 81
  selector:
    app: pod-2
