netpol-namespace.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpolpoc
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: poc-netpol
      ports:
        - port: 80
          protocol: TCP
        # - port: 81
        #   protocol: TCP
